# bedrock

./: .gitignore  CLAUDE.md  README.md  flake.nix
.github/workflows/: nix.yml
contrib/: README.md  check_stack.py  determ-divergence.py  pebs-skid-histogram.py
crates/bedrock/: Makefile  bedrock_main.rs  c_helpers.rs  helpers.c  instruction_counter.rs  machine.rs  page.rs
crates/bedrock-lab/: Cargo.toml
crates/bedrock-vm/: Cargo.toml
crates/bedrock-vmx/: Cargo.toml  build.rs
crates/bedrock-vmx/src/: compat.rs  handler.rs  hypercalls.rs  lib.rs  mod.rs  prelude.rs  tests.rs  vm_state.rs  vm_state_event_tests.rs
crates/bedrock-vmx/src/devices/: apic.rs  ioapic.rs  mtrr.rs  rtc.rs
crates/bedrock-vmx/src/events/: mod.rs  types.rs  types_tests.rs
crates/bedrock-vmx/src/exit_record/: hash.rs  hash_tests.rs  mod.rs  record.rs  record_tests.rs
crates/bedrock-vmx/src/exits/: apic.rs  cpuid.rs  interrupts.rs  io.rs  mod.rs  msr.rs  pebs.rs  rdrand.rs  reasons.rs  vmcall.rs
crates/bedrock-vmx/src/traits/: context.rs  instruction_counter.rs  vm_run.rs
crates/bedrock-vmx/src/vm/: forked.rs  root.rs
guest/: init  libfeedback.c  libfeedback.h  libpcguard.c  libvmcall.h  libvoidstar.c  pebs-register.c
guest/bedrock-console/: Kbuild  Makefile  bedrock-console.c
guest/bedrock-io/: bedrock-io.c
guest/patches/: 0001-x86-mm-force-tlb-flush-on-pte-flag-change.patch  0002-x86-mm-make-flush_tlb_fix_spurious_fault-flush.patch  0003-x86-mm-force-tlb-flush-on-pmd-flag-change.patch
nix/: guest-kernel.nix  podman-initrd.nix  tests.nix
scripts/: gen_pebs_margin.rs
(+56 files in other folders)
